fixed alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@
       opacity: 0;
     }
     100% {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+      clip-path: polygon(-50% -50%, 150% -50%, 150% 150%, -50% 150%);
       transform: translateY(0);
       opacity: 1;
     }
